fixed intro visibility issus

--- a/css/index.css
+++ b/css/index.css
@@ -23,6 +23,7 @@
 		
 			color: white;
 			visibility: hidden;
+
 		}
 		.intro{
 
@@ -30,6 +31,7 @@
 			font-family: ubuntu;
 			color: #626060;
 			display: table-row;
+			visibility: visible;
 		}
 
 		.container-top{
